--- a/.air.toml
+++ b/.air.toml
@@ -9,7 +9,7 @@ pre_cmd = ["make build"]
 post_cmd = []
 cmd = "go build -o ./tmp/main ./cmd/api"
 delay = 1000
-exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules"]
+exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules", "tests"]
 exclude_file = []
 exclude_regex = ["_test.go", "_templ.go"]
 exclude_unchanged = false
