--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "dependencies": {
-    "@tailwindcss/cli": "^4.0.7",
-    "tailwindcss": "^4.0.7"
+  "devDependencies": {
+    "@tailwindcss/cli": "^4.1.4"
   }
 }
