some refactoring + get view toggle and date buttons working

--- a/.air.toml
+++ b/.air.toml
@@ -9,14 +9,14 @@ pre_cmd = ["make build"]
 post_cmd = []
 cmd = "go build -o ./tmp/main ./cmd/api"
 delay = 1000
-exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules"]
+exclude_dir = ["public", "tmp", "vendor", "testdata", "node_modules"]
 exclude_file = []
 exclude_regex = ["_test.go", "_templ.go"]
 exclude_unchanged = false
 follow_symlink = false
 full_bin = ""
 include_dir = []
-include_ext = ["go", "tpl", "tmpl", "html", "templ"]
+include_ext = ["go", "tpl", "tmpl", "html", "templ", "js", "css"]
 include_file = []
 kill_delay = "0s"
 log = "build-errors.log"
