- request logging middleware - common headers middleware -> enforce CSP - store logger in ctx - refactor error page - replace alpinejs usage with vanilla js

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -167,7 +167,7 @@ linters:
       no-global: default
       attr-only: true
       static-msg: true
-      context: scope
+      context: ""
 issues:
   max-same-issues: 0
   max-issues-per-linter: 0
